# encrypt_data

./: encryption_key.key  main.py  pyproject.toml  secure_app.db  simple_datab.db  simple_key.key
