[project]
name = "secure-data-encryption-assignment"
version = "0.1.0"
description = "A secure vault app to store, retrieve, and manage encrypted secrets using Python and Streamlit."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "cryptography",
]

[tool.poetry]
package-mode = false
